ingress/gateway-api-on-gke/part-order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: part-order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: part-order-service
  template:
    metadata:
      labels:
        app: part-order-service
    spec:
      containers:
        - name: part-order-service
          image: ram1uj/part-order-service:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 8080
