ingress/gateway-api-on-gke/part-order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: part-order-service
spec:
  selector:
    app: part-order-service
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
