ingress/gateway-api-on-gke/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: parts-route
  namespace: default
spec:
  parentRefs:
    - name: parts-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /inventory
        - path:
            type: PathPrefix
            value: /parts
      backendRefs:
        - name: part-inventory-service
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /orders
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: part-order-service
          port: 80
