ingress/gateway-api-on-gke/part-order-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: part-order-ingress
#  annotations:
#    kubernetes.io/ingress.class: "gce"
spec:
  ingressClassName: "gce"
  rules:
    - http:
        paths:
          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: part-inventory-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: part-inventory-service
                port:
                  number: 80
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: part-order-service
                port:
                  number: 80
